# datastates-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.sh  spack.yaml
benchmarks/: CMakeLists.txt
include/dstates/ai/: client.hpp  types.hpp
include/dstatesai/: client-cpp.h  types.h
src/: CMakeLists.txt  DStatesAIConfig.cmake.in
src/client/: client-cpp.cc  client-py-impl.cc  client-py-impl.cpp  client-py-impl.h  client-py-impl.hpp  client-py-module.cc  client-py-module.cpp  client.cpp
src/common/: debug_memory_resource.h
src/launcher/: launcher.cc
src/server/: server.cc  server.cpp  server.h  server.hpp  simple_launcher.cpp
tests/: CMakeLists.txt  dstatesai_server_tests.cc  test_client.py  test_pyclient.in
